<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

     
	    <!-- <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name" 
	    />  -->
        
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    tools:context=".MainActivity" >
        
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_title" 
    	/>
                
        <EditText
    	android:id="@+id/edit_bill_amount"
    	android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/edit_text_default"
    	/>
        
    </LinearLayout>
    
    <CheckBox android:id="@+id/checkbox_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_option"
        android:onClick="onCheckboxClicked"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate" 
        android:onClick="calculate"
    />
    
    
    <TextView
        android:id="@+id/tip_text"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text" 
	/> 
    

</LinearLayout>
